[tool.poetry]
name = "stockx_sneaker_analytics"
version = "0.1.0"
description = "Sneaker Analytics: Understand Your Sneakers!"
authors = ["Jeff Chen <jeff73511@msn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
dash = "^2.6.2"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

